# marketSim

./: .gitignore  README.md
apps/core-ocaml/: README.md  dune-project
apps/core-ocaml/lib/: clock.ml  clock.mli  dune  event.ml  event.mli  scheduler.ml  scheduler.mli  source.ml  source.mli  speed_governor.ml  speed_governor.mli
apps/dashboard/: README.md
apps/orchestrator/: README.md  package-lock.json  package.json  tsconfig.json
apps/orchestrator/src/: player.ts  server.ts  state.ts  ws.ts
apps/orchestrator/src/routes/: replay.ts
data/: schema.ndjson.md
docs/: ARCHITECTURE.md
scripts/: gen_sample_data.py
sdks/python/: README.md  pyproject.toml
sdks/python/examples/: print_events.py
sdks/python/market_sim_sdk/: __init__.py  client.py
sdks/python/market_sim_sdk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sdks/rust/src/: lib.rs
